tests/baselines/reference/tsxElementResolution12.errors.txt
tests/cases/conformance/jsx/tsxElementResolution12.tsx(22,7): error TS2339: Property 'x' does not exist on type 'void'.
tests/cases/conformance/jsx/tsxElementResolution12.tsx(29,7): error TS2322: Type 'string' is not assignable to type 'number'.


==== tests/cases/conformance/jsx/tsxElementResolution12.tsx (2 errors) ====
    declare module JSX {
    	interface Element { }
    	interface ElementAttributesProperty { pr: any; }
    }
    
    interface Obj1 {
    	new(n: string): any;
    }
    var obj1: Obj1;
    <obj1 x={10} />; // OK
    
    interface Obj2 {
    	new(n: string): { q?: number; pr: any };
    }
    var obj2: Obj2;
    <obj2 x={10} />; // OK
    
    interface Obj3 {
    	new(n: string): { x: number; };
    }
    var obj3: Obj3;
    <obj3 x={10} />; // Error
          ~
!!! error TS2339: Property 'x' does not exist on type 'void'.
    
    interface Obj4 {
    	new(n: string): { x: number; pr: { x: number; } };
    }
    var obj4: Obj4;
    <obj4 x={10} />; // OK
    <obj4 x={'10'} />; // Error
          ~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    